# geoinfer-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  env.prod  justfile  pyproject.toml
.github/workflows/: build.yml  ci.yml  deploy.yml  lint.yml  test.yml
deploy/: env.prod.tpl  nginx.conf  remote_rollout.sh  remote_rollout_docker.sh  remote_rollout_nodocker.sh
gpu_server/: .dockerignore  README.md  app.py  deploy.sh  requirements.txt
src/: main.py
src/analytics/: service.py
src/api/: router.py
src/api/analytics/: models.py  requests.py  router.py  schemas.py
src/api/billing/: handler.py  models.py  requests.py  router.py  schemas.py
src/api/core/: constants.py  dependencies.py  messages.py
src/api/credits/: __init__.py  handler.py  models.py  requests.py  router.py  schemas.py
src/api/email/: router.py  schemas.py
src/api/health/: router.py
src/api/invitation/: handler.py  models.py  requests.py  router.py  schemas.py
src/api/keys/: handler.py  models.py  requests.py  router.py  schemas.py
src/api/organization/: handler.py  models.py  requests.py  router.py  schemas.py
src/api/prediction/: models.py  requests.py  router.py  schemas.py  validators.py
src/api/role/: handler.py  models.py  requests.py  router.py  schemas.py
src/api/stripe/: __init__.py  router.py
src/cache/: __init__.py  decorator.py
src/core/: base.py  context.py  rate_limiting.py
src/database/: alembic.ini  connection.py
src/emails/: __init__.py  preview.py  render.py
src/redis/: client.py
src/services/: redis_service.py  user_onboarding_service.py  user_organization_service.py
src/utils/: hashing.py  logger.py  path_helpers.py  r2_client.py
tests/: README.md  conftest.py
tests/factories/: __init__.py  api_keys.py  base.py  credit_grants.py  feedback.py  invitations.py  organizations.py  predictions.py  roles.py  shared.py  subscriptions.py  usage.py  users.py
tests/integration/: test_user_organization_flow.py
tests/unit/: conftest.py
tests/utils/: assertions.py
(+156 files in other folders)
