[project]
name = "geoinfer-api"
version = "0.1.0"
description = "AI-powered GPS coordinate prediction from images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "uvicorn[standard]>=0.18.0",
    "pydantic[email]>=2.11.9",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0", # PostgreSQL async driver
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "geoclip>=1.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "cachetools>=5.3.0",
    "aiocache>=0.12.0",
    "python-jose[cryptography]>=3.3.0",
    "itsdangerous>=2.1.0",
    "passlib[bcrypt]>=1.7.4",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.0.0",
    "resend>=2.13.1",
    "stripe>=12.5.1",
    "aiocache>=0.12.3",
    "greenlet>=3.2.4",
    "email-normalize>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "factory-boy>=3.3.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.0.0",
    "types-passlib>=1.7.0",
    "types-python-jose>=3.3.0",
    "types-cachetools>=5.3.0",
    "types-redis>=4.0.0",
    "asgi-lifespan>=0.1.0",
    "httpx>=0.25.0",
]

[project.scripts]
dev = "src.main:run_dev_server"
prod = "src.main:run_prod_server"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
]
asyncio_mode = "auto"
markers = [
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]

[dependency-groups]
dev = [
    "asgi-lifespan>=0.1.0",
    "jose>=1.0.0",
    "sqladmin>=0.21.0",
    "types-pillow>=10.2.0.20240822",
    "types-stripe>=3.5.2.20240106",
]
